2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtrmidx.c: Fix

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c (stop_dump): Call security_stream_read_cancel

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/find.c: Find the find result in a hash
	* server-src/find.h (hash_find_log, make_dump_hash, free_dump_hash,
	  dump_hash_exist): Add prototypes
	* server-src/amtrmidx.c, server-src/amtrmlog.c: Use the hash

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driverio.h (chunker_t, wtaper_t): sendresult is a
	  gboolean
	* server-src/driver.c: Fix sending the result to taper twice

2016-05-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda-scripts.7.xml: Add notes on how to abort a
	  backup with exit status != 0

2016-05-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/pp-scripts.pl: Use $dbgdir

2016-05-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Rest.pm (cleanup_for_amdump): Clean
	  $body->[0]{report}{head}->{hostname}
	* installcheck/pp-scripts.pl: hostname is undef

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/Makefile.am (applicationexec_SCRIPTS_SHELL): Add
	  script-fail
	* application-src/script-fail.sh: New script that always fail (for
	  testing)
	* installcheck/Installcheck/Rest.pm (cleanup_for_amdump): New function
	  to cleanup result for a report
	* installcheck/pp-scripts.pl: Check failing scripts

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/holding.c: Accept level up to DUMP_LEVELS

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c: Fix delay in waiting for application

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/client_util.c: Improve parsing of estimate scripts
	* client-src/sendsize.c: Fail estimate if script fail